--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,6 +1,8 @@
 body{
     width:100%;
-    background-color: #5d4b56;
+    margin:0;
+    padding: 0;
+    /* background-color: #5d4b56; */
 }
 
 /*****************menu styles***********/
@@ -24,7 +26,7 @@ body{
     line-height: 40px;
     color: #BFC2C7;
     font-family: 'Roboto', sans-serif;
-    background-color: white;
+    background-color:#0f170aeb;
     transition: background-color 0.1s;
 }
 
@@ -40,7 +42,7 @@ body{
     z-index: 1;
     width: 38px;
     height: 38px;
-    background-color: white;
+    background-color: #0f170aeb;
     border-radius: 50px 0 0 0;
     transform: rotate(-45deg) scale(0.73);
 }
