--- a/css/header-styles.css
+++ b/css/header-styles.css
@@ -1,15 +1,4 @@
 /***************ADDITIONAL STYLES***********************/
-.header_section img,
-.city_section--image img,
-.historical_section img{
-    width:100%;
-}
-.header_section,
-.city_section,
-.language_section,
-.historical_section{
-    padding-bottom: 2rem;
-}
 .clearfix{
     overflow: auto;
     zoom: 1;
@@ -40,30 +29,33 @@ p{
 
 .header_section{
     background: -webkit-linear-gradient(45deg, teal,transparent);
+    height: 60vh;
 }
 
 
 /*************ADDED ON RESPONSIVE*****************/
 @media (min-width: 720px){
     h1{
-        background: -webkit-linear-gradient(left, blue,yellowgreen,red,purple);
+        /* background: -webkit-linear-gradient(left, blue,yellowgreen,red,purple);
         -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        -webkit-text-fill-color: transparent; */
+        color: teal;
         font-size: 2rem;
         margin: 0;
     }
     h2{
         font-size: 1.3rem;
-        padding: 0 0 1.5em 0;
+        /* padding: 0 0 1.5em 0; */
     }
 
     .header_section p{
         color: #fff;
-        font-size: 0.10rem;
+        font-size: 0.9rem;
         transform: rotate(270deg);
     }
 
     .header_section img{
-        width: 85%;
-        border-radius: 50%;
+        width: 100%;
+        /* border-radius: 50%; */
     }
+}
