--- a/css/styles.css
+++ b/css/styles.css
@@ -9949,7 +9949,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 17rem;
+    /* padding-left: 17rem; */
   }
 }
 h1,
