--- a/css/header-styles.css
+++ b/css/header-styles.css
@@ -6,7 +6,7 @@
 
 h1{
     font-size: 1.0rem;
-    color: #152069;
+    /* color: #152069; */
 }
 
 
@@ -43,7 +43,7 @@ p{
         /* background: -webkit-linear-gradient(left, blue,yellowgreen,red,purple);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent; */
-        color: #152069;
+        /* color: #152069; */
         font-size: 2rem;
         margin: 0;
     }
