--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,12 +1,12 @@
-body{
-    width:100%;
-    margin:0;
+body {
+    width: 100%;
+    margin: 0;
     padding: 0;
     /* background-color: #5d4b56; */
 }
 
 /*************containers*****************/
-.inner_container{
+.inner_container {
     width: 51%;
     padding: 1rem;
 }
@@ -21,25 +21,97 @@ body{
 
 /**************************section headings***************************/
 
-h2{
+h2 {
     font-size: 1.3rem;
     margin: 0.5rem 0;
     text-transform: uppercase;
-    color: #152069;
+    /* color: #152069; */
 }
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+
+h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: 0.5rem;
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  line-height: 1.2;
+  color: #152069;
+}
+
+h1, .h1 {
+  font-size: 6rem;
+}
+
+h2, .h2 {
+  font-size: 3.5rem;
+}
+
+h3, .h3 {
+  font-size: 2rem;
+}
+
+h4, .h4 {
+  font-size: 1.5rem;
+}
+
+h5, .h5 {
+  font-size: 1.25rem;
+}
+
+h6, .h6 {
+  font-size: 1rem;
+}
+
 /*********************ends*****************/
 
+.bg-primary {
+    background-color: #343a40 !important;
+  }
+
 /**************************************BREADCRUMB MENU*********************************/
-#batch_more_content h2{
-    font-size: 1.3rem;
-    padding: 0 0 1.5em 0;
+#batch_more_content h2 {
+    font-size: 1rem;
+    padding: 1.5em 0 1.5em 0;
     text-align: center;
 }
 
-.breadcrumbs{
+.navbar-toggler{
+  color: rgb(46 39 39 / 50%);
+  border: 2px solid;
+  border-color: rgb(48 44 44 / 10%);
+  padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: blue;
+    /* background-color: transparent;
+    border: 1px solid transparent; */
+    border-radius: 0.25rem;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler-icon{
+  display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%;
+    background-color: azure;
+}
+
+.breadcrumbs {
     width: 100%;
     margin: auto;
-    background-color:#152069;
+    /* background-color: #152069; */
+    background: transparent linear-gradient(90deg, #152069 0%, #f069 100%)
 }
 
 .breadcrumbs a {
@@ -85,17 +157,18 @@ h2{
 .none {
     display: none;
 }
+
 /*********************ends*****************/
 
 
 /* resume styles */
-@media (min-width: 992px){
+@media (min-width: 992px) {
     section.resume-section {
         padding-top: 2rem;
     }
 }
 
-#page-top{
+#page-top {
     background: #343a40;
     padding-left: 17rem;
     position: relative;
@@ -104,10 +177,147 @@ h2{
 /* resume styles ends */
 
 /*******backgrounds*********/
-.dark{
+.dark {
     background-color: #152069;
 }
 
-.accepted{
+.accepted {
     background-color: #fff;
 }
+
+/* added 21/11/2022 */
+.profile-img{
+    margin-bottom: 3rem;
+}
+.img-profile {
+    width: 15rem;
+}
+
+.masthead {
+    padding: 65px 0px 65px 0;
+    /* background-color: #26bb9e !important; */
+    /* background-color: #315a97 !important; */
+    background-color: #fff !important;
+    color: red !important;
+}
+
+.masthead-heading {
+  font-size: 2.75rem;
+  line-height: 2.75rem;
+}
+
+.divider-custom{
+    margin: 1.25rem 0 1.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.divider-custom.divider-light .divider-custom-icon{
+    background-color: #fff;
+}
+
+.divider-custom.divider-light .divider-custom-line{
+    /* background-color: #fff; */
+    background-color: red;
+}
+
+.divider-custom .divider-custom-line:first-child{
+    margin-right: 1rem;
+}
+
+.divider-custom .divider-custom-line:last-child{
+    margin-left: 1rem;
+}
+
+.divider-custom .divider-custom-line{
+    width: 100%;
+    max-width: 7rem;
+    height: 0.25rem;
+    /* background-color: #2c3e50; */
+    border-radius: 1rem;
+    border-color: #2c3e50;
+}
+
+/* SOCIAL ICONS */
+
+.social-icons .social-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 3.5rem;
+    width: 3.5rem;
+    background-color: #fff;
+    color: #152069;
+    border: 1px solid #152069;
+    border-radius: 100%;
+    font-size: 1.5rem;
+    margin-right: 1.5rem;
+  }
+  .social-icons .social-icon:last-child {
+    margin-right: 0;
+  }
+  .social-icons .social-icon:hover {
+    /* background-color: #152069; */
+    background-color: red;
+    color: #fff;  
+  }
+
+
+  /* HOVER EFFECTS */
+
+  /* Shutter Out Vertical */
+.hvr-shutter-out-vertical {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    background: #e1e1e1;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  .hvr-shutter-out-vertical:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #152069;
+    color: #fff;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transform-origin: 50%;
+    transform-origin: 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-shutter-out-vertical:hover, .hvr-shutter-out-vertical:focus, .hvr-shutter-out-vertical:active {
+    color: white;
+  }
+  .hvr-shutter-out-vertical:hover:before, .hvr-shutter-out-vertical:focus:before, .hvr-shutter-out-vertical:active:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+
+  /* 23/11/2022 */
+  .footer{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #152069;
+    color: #fff;
+  }
+
+  .footer h4{
+    color:#fff;
+  }
